# Tearoom-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RecreateCMake.bat  StartRemote.bat
Scenes/: AnimTimeSaverTest.scene  DemoLevel.oldscene  DemoLevel.scene  DemoLevelTwoRooms.scene  EnvironmentalTest.scene  ReflectiveDemo.scene  rock.scene  rock1.scene  test.oldscene  test.scene  test1.oldscene  test1.scene
Shaders/: CMakeLists.txt  animatedModelVS.glsl  colorVS.glsl  modelFS.glsl  modelVS.glsl  skyboxVS.glsl  textFS.glsl  textVS.glsl  textureFS.glsl
Shaders/Depth/: depthFS.glsl  depthPointVS.glsl  depthVS.glsl
Shaders/Post/: blurFS.glsl  downscaleFS.glsl  gaussianBlurFS.glsl  postProcessingFS.glsl  postProcessingVS.glsl
Shaders/Ref/: reflectFS.glsl
Shaders/Shared/: lightColorAddition.glsl
Shaders/Ui/: uiColorVS.glsl  uiTextureVS.glsl
res/animations/: animacjaTestowa.anim  cacheAdditional2.anim  cacheWatch.anim  (+8 more)
src/: CMakeLists.txt  Global.cpp  Global.h  Headers.h  Profiler.cpp  Profiler.h  main.cpp
src/Mesh/: AnimatedModel.cpp  AnimatedModel.h  Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  MeshAnimatedModel.cpp  MeshAnimatedModel.h  MeshBox.cpp  MeshBox.h  MeshColorBox.cpp  MeshColorBox.h  MeshColorCone.cpp  MeshColorCone.h  MeshColorCylinder.cpp  MeshColorCylinder.h  MeshColorPlane.cpp  MeshColorPlane.h  MeshColorSphere.cpp  MeshColorSphere.h  MeshColorTorus.cpp  MeshColorTorus.h  MeshCone.cpp  MeshCone.h  MeshCylinder.cpp  MeshCylinder.h  MeshModel.cpp  MeshModel.h  MeshModelInstanced.cpp  MeshModelInstanced.h  MeshPlane.cpp  MeshPlane.h  MeshProperty.cpp  MeshProperty.h  MeshRef.cpp  MeshRef.h  MeshRefBox.cpp  MeshRefBox.h  MeshRefSphere.cpp  MeshRefSphere.h  (+14 more)
src/Render/: Camera.cpp  Camera.h  GeometryShader.cpp  GeometryShader.h  LightManager.cpp  LightManager.h  PostProcessingShader.cpp  PostProcessingShader.h  Renderable.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  TextRenderer.cpp  TextRenderer.h
src/Scene/: AnimationData.cpp  AnimationData.h  AssetManager.cpp  AssetManager.h  BillboardNode.cpp  BillboardNode.h  CollisionSystem.cpp  CollisionSystem.h  ComposedTransform.cpp  ComposedTransform.h  DirLightNode.cpp  DirLightNode.h  Frustum.cpp  Frustum.h  GameManager.cpp  GameManager.h  GraphNode.cpp  GraphNode.h  GuiConfigurable.cpp  GuiConfigurable.h  LightNode.cpp  LightNode.h  MenuScene.cpp  MenuScene.h  MiszukScene.cpp  MiszukScene.h  Node.cpp  Node.h  OctreeNode.cpp  OctreeNode.h  OptionsScene.cpp  OptionsScene.h  Plane.cpp  Plane.h  PointLightNode.cpp  PointLightNode.h  QuadraticLightNode.cpp  QuadraticLightNode.h  RotatingNode.cpp  RotatingNode.h  (+14 more)
src/Scene/Components/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  Billboard.cpp  Billboard.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CollectableObject.cpp  CollectableObject.h  Collider.cpp  Collider.h  Component.cpp  Component.h  KeyFrameAnimation.cpp  KeyFrameAnimation.h  PhysicalObject.cpp  PhysicalObject.h  Picking.cpp  Picking.h  PlayerMovement.cpp  PlayerMovement.h  RotatingObject.cpp  RotatingObject.h  SkeletalAnimation.cpp  SkeletalAnimation.h  SoundSource.cpp  SoundSource.h  SphereCollider.cpp  SphereCollider.h  SunController.cpp  SunController.h
src/Scene/Components/LightComponents/: DirLightComp.cpp  DirLightComp.h  LightComp.cpp  LightComp.h  PointLightComp.cpp  PointLightComp.h  QuadraticLightComp.cpp  QuadraticLightComp.h  SpotLightComp.cpp  SpotLightComp.h  Sun.cpp  Sun.h
src/Scene/Scenes/: EditorScene.cpp  EditorScene.h  LoadingScene.cpp  LoadingScene.h  MenuPreview.cpp  MenuPreview.h  MenuScene.cpp  MenuScene.h  MiszukScene.cpp  MiszukScene.h  OptionsScene.cpp  OptionsScene.h  PauseScene.cpp  PauseScene.h  Scene.cpp  Scene.h  TestScene.cpp  TestScene.h
src/Scene/Scripts/: AnimTimeSaver.cpp  AnimTimeSaver.h  CollectableObject.cpp  CollectableObject.h  CollectableWatch.cpp  CollectableWatch.h  CollisionTest.cpp  CollisionTest.h  ColumnMoving.cpp  ColumnMoving.h  IntroCutscene.cpp  IntroCutscene.h  OutroCutscene.cpp  OutroCutscene.h  Picking.cpp  Picking.h  PlayerMovement.cpp  PlayerMovement.h  SunTimeActivator.cpp  SunTimeActivator.h
src/Serialization/: DataSerializer.cpp  DataSerializer.h  Serializable.h  Serializer.cpp  Serializer.h
src/Shaders/: animatedModelVS.glsl  colorFS.glsl  colorVS.glsl  instanceModelVS.glsl  lightFS.glsl  lightVS.glsl  modelFS.glsl  modelVS.glsl  screenTextureFS.glsl  screenTextureVS.glsl  skyboxFS.glsl  skyboxVS.glsl  textFS.glsl  textVS.glsl  textureFS.glsl  textureVS.glsl
src/Shaders/Depth/: depthDebugFS.glsl  depthDebugVS.glsl  depthFS.glsl  depthPointFS.glsl  depthPointGS.glsl  depthPointVS.glsl  depthVS.glsl
src/Shaders/Post/: blurFS.glsl  gaussianBlurFS.glsl  gaussianBlurVS.glsl  postProcessingFS.glsl  postProcessingVS.glsl
src/Shaders/Ref/: reflectFS.glsl  reflectVS.glsl  refractFS.glsl  refractVS.glsl
src/Shaders/Shared/: lightColorAddition.glsl  lightComputations.glsl  lightComputations.sglsl  lights.glsl
src/Shaders/Ui/: uiColorFS.glsl  uiColorVS.glsl  uiTextureFS.glsl  uiTextureVS.glsl
src/Shaders/depth/: depthDebugVS.glsl  depthPointGS.glsl  depthPointVS.glsl  depthVS.glsl
src/Shaders/post/: postProcessingFS.glsl
src/Shaders/ref/: reflectFS.glsl  reflectVS.glsl  refractFS.glsl  refractVS.glsl
src/Shaders/ui/: uiColorFS.glsl  uiTextureFS.glsl  uiTextureVS.glsl
src/Ubo/: Ubo.cpp  Ubo.h  UboLights.cpp  UboLights.h  UboTextureColor.cpp  UboTextureColor.h  UboViewProjection.cpp  UboViewProjection.h
src/Ui/: InterfaceTransform.cpp  InterfaceTransform.h  UiButton.cpp  UiButton.h  UiCanvas.cpp  UiCanvas.h  UiCheckbox.cpp  UiCheckbox.h  UiColorPlane.cpp  UiColorPlane.h  UiElement.cpp  UiElement.h  UiMesh.cpp  UiMesh.h  UiPlane.cpp  UiPlane.h  UiSlider.cpp  UiSlider.h  UiSliderInt.cpp  UiSliderInt.h  UiText.cpp  UiText.h  UiTextButton.cpp  UiTextButton.h  UiTexturedElement.cpp  UiTexturedElement.h
(+19 files in other folders)
